# oh-my-yew

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
scripts/: fetch-ag-grid-community.sh  fetch-ag-grid-enterprise.sh
src/: app.rs  docs.rs  home.rs  lib.rs  main.rs  pages.rs  route.rs
src/apps/: mod.rs
src/apps/ag_grid/: mod.rs
src/apps/plotly/: mod.rs
src/components/: mod.rs  sidebar.rs
src/pages/: chart.rs  grid.rs  home.rs  mod.rs
static/content/: ag-grid-notes.md  chart-notes.md  intro.md  using-markdown.md
static/css/: sidebar.css  styles.css
static/js/: aggrid-wrapper.js  chart.js  plotly.js
static/pages/blog/: 20250419.md
static/pages/docs/: components.md  introduction.md  static-content-system.md  styling.md  trunk.md
static/pages/docs/components/: ag-grid.md  js-libraries.md  plotly.md  sidebar.md
static/pages/docs/styling/: styling_css.md  styling_tailwind.md
