[package]
name = "oh_my_yew"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }
wasm-bindgen = "0.2.100"
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1", features = ["derive"] }
gloo-net = "0.6.0"
log = "0.4.27"
wasm-bindgen-futures = "0.4.50"


[build-dependencies]
glob = "0.3"
pulldown-cmark = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
